# qoi

./: .gitignore  Cargo.toml  README.md  create_tests.sh  three.qoi
benches/: benches.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs
images/: three.raw
src/: decode.rs  encode.rs  lib.rs
tests/: four.qoi  four.raw  tests.rs
